crates/strider/tests/snapshots/v3__arm_be__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x10114:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "19" [label="φ d1", shape=house, fillcolor="#163030"];
  "12" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v20" [color="#888888", style=dashed];
  "v20" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v21" [color="#888888", style=dashed];
  "v21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x10114:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "11" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "23" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "27" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "28" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xffffffe4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "31" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "34" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "37" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "40" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "44" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="φ d0", shape=house, fillcolor="#163030"];
  "12" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v48" [color="#888888", style=dashed];
  "v48" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v49" [color="#888888", style=dashed];
  "v49" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ r1", shape=house, fillcolor="#163030"];
  "12" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v50" [color="#888888", style=dashed];
  "v50" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v51" [color="#888888", style=dashed];
  "v51" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ Val", shape=house, fillcolor="#163030"];
  "12" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "52" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "53" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "53" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v54" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v54" [color="#888888", style=dashed];
  "v54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v56" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v56" [color="#888888", style=dashed];
  "v56" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="φ Mem", shape=house, fillcolor="#163030"];
  "12" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "58" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "60" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "63" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "60" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v54" -> "60" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0xffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "13" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v54" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "66" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "61" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "52" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "67" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v56" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0xffffffdc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "5" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v56" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
